# FPETSc

TEST1/: CMakeLists.txt  Makefile  README  ex1f.f
TEST2/: CMakeLists.txt  Makefile  README  main.f90  solv_lin_syst.f90
TESTF90/: CMakeLists.txt  Makefile  README  ex20f90.F90  main.f90  o_Makefile
jedbrown-cmake-modules-f103d9f/: CMakeLists.txt
