cmake_minimum_required(VERSION 2.8)
project (Test Fortran C)

# Da sistemare! #
SET(FIND_PETSC /home/dante/CODE/jedbrown-cmake-modules-f103d9f)
# -- #
SET(CMAKE_MODULE_PATH ${FIND_PETSC} )
FIND_PACKAGE(PETSc REQUIRED)
SET(FORTRAN_PREPROCESS_FLAG -I${PETSC_INCLUDE_DIR})
SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -I${PETSC_INCLUDE_CONF}")
SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -fpp")

SET(MAIN_FILES main.f90 solv_lin_syst.f90)

ADD_EXECUTABLE(TEST ${MAIN_FILES})
SET_TARGET_PROPERTIES(TEST PROPERTIES COMPILE_FLAGS ${FORTRAN_PREPROCESS_FLAG} )
TARGET_LINK_LIBRARIES(TEST  ${PETSC_LIBRARIES})
